--------------------------------------------------------------------------------
name:          vimeta
version:       0.1.0.0
synopsis:      FIXME
homepage:      http://github.com/pjones/vimeta
bug-reports:   http://github.com/pjones/vimeta/issues
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2013-2015 Peter Jones
category:      Video
stability:     experimental
tested-with:   GHC == 7.8.4
build-type:    Simple
cabal-version: >=1.10
description:   FIXME

--------------------------------------------------------------------------------
extra-source-files:
  CHANGES
  README.md
  TODO.org

--------------------------------------------------------------------------------
source-repository head
  type: git
  location: git://github.com/pjones/vimeta.git

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual: True
  default: False

--------------------------------------------------------------------------------
library
  exposed-modules:
    Vimeta.Config
    Vimeta.Context
    Vimeta.Download
    Vimeta.Format
    Vimeta.Tagger

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-uni-patterns
  ghc-prof-options: -prof -auto-all

  if flag(maintainer)
    ghc-options: -Werror

  build-depends: aeson                >= 0.8   && < 0.9
               , base                 >= 4.6   && < 5.0
               , bytestring           >= 0.10  && < 0.11
               , containers           >= 0.5   && < 0.6
               , http-client          >= 0.4   && < 0.5
               , http-client-tls      >= 0.2.2 && < 0.3
               , http-types           >= 0.8   && < 0.9
               , mtl                  >= 2.1   && < 2.2
               , old-locale           >= 1.0   && < 1.1
               , optparse-applicative >= 0.11  && < 0.12
               , process              >= 1.1   && < 1.3
               , temporary            >= 1.1   && < 1.3
               , text                 >= 0.11  && < 1.3
               , themoviedb           >= 1.0   && < 1.1
               , time                 >= 1.2   && < 1.6

--------------------------------------------------------------------------------
-- executable vimeta
--   default-language: Haskell2010
--   hs-source-dirs: src
--   main-is: Main.hs

--   if flag(maintainer)
--     ghc-options: -Werror
